Terceiro dia do challenge! #7DaysOfCode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
     </main>
     <script src="sketch.js"></script>
-    <script src="desafio02/desafio2.js"></script>
+    <script src="desafios/desafio2.js"></script>
+    <script src="desafios/desafio3.js"></script>
   </body>
 </html>
