--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="sketch.js"></script>
     <script src="desafios/desafio2.js"></script>
     <script src="desafios/desafio3.js"></script>
+    <script src="desafios/desafio4.js"></script>
   </body>
 </html>
