--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="desafios/desafio2.js"></script>
     <script src="desafios/desafio3.js"></script>
     <script src="desafios/desafio4.js"></script>
+    <script src="desafios/desafio5.js"></script>
   </body>
 </html>
